--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <title>Hokage Tribute</title>
     <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
         <div class=container>
