--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <title>Hokage Tribute</title>
     <head>
-<link rel="stylesheet" type="text/css" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
         <div class=container>
@@ -10,7 +10,7 @@
             <h1 id="title">Naruto Uzumaki</h1>
             
             <div id="image-div">
-            <img src="Images/Naruto_Hokage.jpg" alt="Naruto Uzumaki 7th Hokage" id="image" class="responsive">
+            <img src="./Naruto_Hokage.jpg" alt="Naruto Uzumaki 7th Hokage" id="image" class="responsive">
             <p id="img-caption"><em>"Don't Underestimate me! I don't quit and I don't run." -Naruto</em></p>
             </div>
 
